<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- NOT SPECIFYING PARENT SO EACH MODULE STANDS ALONE -->

	<groupId>com.nqadmin.swingset</groupId>
	<artifactId>swingset</artifactId>
	<version>4.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>swingset</name>
	<description>Data-aware replacements for manyof the standard Java Swing components</description>
	<url>https://github.com/bpangburn/swingset</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<version.maven>3.6.3</version.maven>
		<version.java>1.8</version.java>

		<version.glazedlists>1.11.0</version.glazedlists>
		<version.log4j>2.14.0</version.log4j>
		<version.jdbcrowsetimpl>1.0.2</version.jdbcrowsetimpl>

		<version.maven-enforcer-plugin>3.0.0-M3</version.maven-enforcer-plugin>
		<version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
		<version.dependency-check-maven>5.3.2</version.dependency-check-maven>
		<version.maven-source-plugin>3.2.1</version.maven-source-plugin>
		<version.maven-javadoc-plugin>3.2.0</version.maven-javadoc-plugin>
		<version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
		<version.nexus-staging-maven-plugin>1.6.8</version.nexus-staging-maven-plugin>
		<version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
		<version.maven-failsafe-plugin>3.0.0-M5</version.maven-failsafe-plugin>
		<version.junit-jupiter-any>5.7.0</version.junit-jupiter-any>
		<version.metrics-core>4.1.16</version.metrics-core>
	</properties>

	<licenses>
		<license>
			<name>BSD 3-Clause</name>
			<url>https://spdx.org/licenses/BSD-3-Clause.html</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Prasanth R. Pasala</name>
			<email>swingset@pangburngroup.com</email>
			<organization>The Pangburn Group, Inc.</organization>
			<organizationUrl>https://pangburngroup.com</organizationUrl>
		</developer>
		<developer>
			<name>Brian E. Pangburn</name>
			<email>swingset@pangburngroup.com</email>
			<organization>The Pangburn Group, Inc.</organization>
			<organizationUrl>https://pangburngroup.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/bpangburn/swingset</url>
		<connection>scm:git:git@github.com:bpangburn/swingset.git</connection>
		<developerConnection>scm:git:git@github.com:bpangburn/swingset.git</developerConnection>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.glazedlists/glazedlists -->
		<dependency>
			<groupId>com.glazedlists</groupId>
			<artifactId>glazedlists</artifactId>
			<version>${version.glazedlists}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${version.log4j}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<!-- log4j-core, if present, used to configure log4j shtutdown -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${version.log4j}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/ *** NEED LINK *** -->
		<dependency>
			<groupId>com.nqadmin.rowset</groupId>
			<artifactId>jdbcrowsetimpl</artifactId>
			<version>${version.jdbcrowsetimpl}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<version>${version.maven-surefire-plugin}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-failsafe-plugin</artifactId>
			<version>${version.maven-failsafe-plugin}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${version.junit-jupiter-any}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${version.junit-jupiter-any}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${version.junit-jupiter-any}</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.dropwizard.metrics/metrics-core -->
		<dependency>
			<groupId>io.dropwizard.metrics</groupId>
			<artifactId>metrics-core</artifactId>
			<version>${version.metrics-core}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Maven Enforcer forces specified version of Java and Maven -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${version.maven-enforcer-plugin}</version>
				<executions>
					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedPlugins>
									<!-- will only display a warning but does not fail the build. -->
									<level>WARN</level>
									<excludes>
										<exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>
									</excludes>
									<message>Please consider using the maven-invoker-plugin
										(http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
								</bannedPlugins>
								<requireMavenVersion>
									<version>${version.maven}</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${version.java}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.maven-compiler-plugin}</version>

				<configuration>
					<source>${version.java}</source>
					<target>${version.java}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.maven-surefire-plugin}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${version.maven-failsafe-plugin}</version>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<profile>
	<!-- invoked during verify phase -->
	<!-- https://jeremylong.github.io/DependencyCheck/dependency-check-maven/ -->
			<id>owasp-check</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<version>${version.dependency-check-maven}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${version.maven-source-plugin}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<phase>package</phase>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${version.maven-javadoc-plugin}</version>
						<configuration>
							<source>${version.java}</source>
							<target>${version.java}</target>
							<failOnError>false</failOnError>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadoc</id>
								<phase>package</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${version.maven-gpg-plugin}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<keyname>${gpg.keyname}</keyname>
									<passphraseServerId>${gpg.keyname}</passphraseServerId>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${version.nexus-staging-maven-plugin}</version>
						<executions>
							<execution>
								<id>default-deploy</id>
								<phase>deploy</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
							</execution>
						</executions>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>false</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- java-9-plus profile
			* set javac release=8
			* javadoc
			  - target html5
			  - Newer javadoc complains about private methods/fields missing javadoc.
			    So, at least for now, add "all,-missing"
			  - Add ",-html" to avoid 'rel=' issue.

			  Removing these checks is not too bad since there's a lot of
			  dependency on the IDE for most checking.
		-->
		<profile>
			<id>java-9-plus</id>
			<activation>
				<jdk>[1.9,)</jdk>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<artifactId>maven-compiler-plugin</artifactId>
							<configuration>
								<release>8</release>
							</configuration>
						</plugin>
						<plugin>
							<artifactId>maven-javadoc-plugin</artifactId>
							<configuration>
								<additionalOptions>-html5</additionalOptions>
								<doclint>all,-missing,-html</doclint>
								<links>
									<link>https://javadoc.io/static/com.glazedlists/glazedlists/${version.glazedlists}</link>
								</links>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

</project>
